@@ -6,8 +6,15 @@
  * Save session on SIGHUP -> SaveYourself checkpoint
  * Save to XML instead of this binary format.
  * Add a systray icon to configure the manager "online". E.g. having a
-   menu item "Save session now" to issue a SaveYourself request.
+   menu item "Save session now" to issue a SaveYourself request. (Part. done)
  * Honor SmRestartStyleHint
+
+ * Should we move XfsmTrayIcon to libxfcegui4? It provides a nice way to
+   use NetkTrayIcon, and provides the basic functionality all tray icons
+   use.
+
+ * Try to translate userids provided by smproxy to usernames if hostnames
+   match.
 
 MCS-plugin:
 -----------
