@@ -1,5 +1,6 @@
 #!/bin/sh
 
+smproxy &
 xfwm4 --daemon
 xftaskbar4 &
 xfdesktop &
