@@ -4,6 +4,9 @@
 	  xfce4-session by default if installed.
 	* Added "session control" dialog and tray icon. Made several
 	  improvements. Now requires libxfcegui4 >= 3.92.2
+	* smproxy now works with xfce4-session, that says, X11R5 session
+	  apps are now managed by the session manager as well (e.g. xcalc,
+	  xedit, xbiff or even apps like gimp and gqview)
 
 20030707:
 ---------
