@@ -1,3 +1,9 @@
+2003-07-08 23:20  bmeurer
+
+	* ChangeLog, po/xfce4-session.pot, xfce4-session/ice-layer.c:
+	Client was not removed from "session control" if an ICE error
+	occurred.
+
 2003-07-08 23:05  bmeurer
 
 	* NEWS, configure, configure.ac, xfce4-session/Makefile.am,
